# glyph-dump-rs

./: .gitignore  Cargo.toml  ReadMe.md
.github/workflows/: rust.yml
src/: error.rs  main.rs
