[package]
name = "glyph-dump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto-args = "0.2.9"
auto-args-derive = "0.1.5"
env_logger = "0.9.1"
hex-string = "0.1.0"
image = { version = "0.24.4", features = ["png"] }
log = "0.4.17"
owned_ttf_parser = { version = "0.17.0", default-features = false }
rustc-serialize = "0.3.24"
rusttype = "0.9.2"
tokio = { version = "1.21.2", features = ["full"] }
unicode_categories = "0.1.1"
